--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/rccalendar?schema=public"
 JWT_SECRET="change-me-in-production"
-PORT=3001
+HOST=127.0.0.1
+PORT=3101
 CORS_ORIGIN="http://localhost:3000"
