--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,8 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:seed": "prisma db seed",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "smoke": "node scripts/smoke.cjs"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.15",
@@ -22,15 +23,18 @@
     "@nestjs/platform-express": "10.4.15",
     "@prisma/client": "5.22.0",
     "bcryptjs": "^2.4.3",
+    "busboy": "1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "multer": "1.4.4-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "rrule": "^2.8.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rrule": "^2.8.1",
+    "rxjs": "^7.8.1",
+    "streamsearch": "1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
