--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
+    "dev:win": "next dev -H 127.0.0.1 -p 3100",
     "build": "next build",
     "start": "next start -p 3000"
   },
