fixed task deletion

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,8 @@
     "prisma:seed": "prisma db seed",
     "prisma:studio": "prisma studio",
     "smoke": "node scripts/smoke.cjs",
-    "cleanup:rrule-exdate": "node scripts/cleanup-rrule-exdate.cjs"
+    "cleanup:rrule-exdate": "node scripts/cleanup-rrule-exdate.cjs",
+    "migrate:rrule-exdate": "node scripts/migrate-rrule-exdate-to-field.cjs"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.15",
