--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "db:seed": "pnpm --filter api run prisma:seed",
     "db:studio": "pnpm --filter api run prisma:studio",
     "smoke:api": "pnpm --filter api run smoke",
-    "cleanup:rrule-exdate": "pnpm --filter api run cleanup:rrule-exdate"
+    "cleanup:rrule-exdate": "pnpm --filter api run cleanup:rrule-exdate",
+    "migrate:rrule-exdate": "pnpm --filter api run migrate:rrule-exdate"
   },
   "engines": {
     "node": ">=20"
