--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:win": "next dev -H 127.0.0.1 -p 3100",
+    "dev": "next dev -H 127.0.0.1 -p 5173",
+    "dev:win": "next dev -H 127.0.0.1 -p 5173",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start -p 3000",
+    "clean": "node -e \"try{require('fs').rmSync('.next',{recursive:true,force:true});console.log('Cleaned .next');}catch(e){if(e.code!=='ENOENT')throw e;}\""
   },
   "dependencies": {
     "date-fns": "^4.1.0",
