added advanced reccuring

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,8 @@
     "prisma:studio": "prisma studio",
     "smoke": "node scripts/smoke.cjs",
     "cleanup:rrule-exdate": "node scripts/cleanup-rrule-exdate.cjs",
-    "migrate:rrule-exdate": "node scripts/migrate-rrule-exdate-to-field.cjs"
+    "migrate:rrule-exdate": "node scripts/migrate-rrule-exdate-to-field.cjs",
+    "test:recurrence": "node scripts/test-recurrence.mjs"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.15",
